fixed screen covering bug

--- a/src/components/layout/Menu.module.css
+++ b/src/components/layout/Menu.module.css
@@ -1,6 +1,13 @@
 .menuWrapper {
   height: 100vh;
   width: 100vw;
+  padding: 10vh;
+  background-color: white;
   position: fixed;
+  top: -100vh;
   overflow: hidden;
+}
+
+.active {
+  top: 0;
 }
