--- a/src/components/layout/NavLinks.module.css
+++ b/src/components/layout/NavLinks.module.css
@@ -1,6 +1,5 @@
 .container {
   margin: 0;
-  background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,5 +9,5 @@
 li {
   list-style-type: none;
   font-size: 22px;
-  padding-top: 2em;
+  padding: 2rem;
 }
